fix horizontal scrollbar on pages with a vertical scrollbar
caused by navbar

--- a/style/navbar.css
+++ b/style/navbar.css
@@ -1,5 +1,5 @@
 #navbar {
-	width: 100vw;
+	width: 100%;
 	height: 3em;
 	padding: 0.5em 1em;
 	box-sizing: border-box;
